--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,12 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Who\'s In?</string>
     <string name="facebook_app_id">644597849040245</string>
 
     <!-- Drawer Menu Items -->
     <string name="option_a_item">Opción A</string>
-    <string name="members_item">Members</string>
+    <string name="members_item">Integrantes</string>
     <string name="option_c_item">Opción C</string>
-    <string name="setting_item">Settings</string>
-    <string name="log_out_item">Logout</string>
-
+    <string name="setting_item">Configuración</string>
+    <string name="log_out_item">Cerrar Sesión</string>
 </resources>
