--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,7 +4,7 @@
     <string name="facebook_app_id">644597849040245</string>
 
     <!-- Drawer Menu Items -->
-    <string name="option_a_item">Opción A</string>
+    <string name="fields_item">Canchas</string>
     <string name="members_item">Integrantes</string>
     <string name="option_c_item">Opción C</string>
     <string name="setting_item">Configuración</string>
