--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="facebook_app_id">644597849040245</string>
 
     <!-- Drawer Menu Items -->
-    <string name="option_a_item">Option A</string>
+    <string name="fields_item">Fields</string>
     <string name="members_item">Members</string>
     <string name="option_c_item">Option C</string>
     <string name="setting_item">Settings</string>
@@ -16,6 +16,7 @@
     <string name="group_code">Group Code</string>
     <string name="group_code_required">Group code is required!</string>
     <string name="group_name_required">Group name is required!</string>
+    <string name="members">Members</string>
     <string name="accepted_members">Accepted</string>
     <string name="pending_members">Pending</string>
     <string name="administrator">Administrator</string>
