--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -21,4 +21,12 @@
     <string name="pending_members">Pendientes</string>
     <string name="administrator">Administrador</string>
     <string name="participant">Participante</string>
+    <string name="soccer_field_name">Nombre de la cancha</string>
+    <string name="soccer_field_phone">Teléfono</string>
+    <string name="soccer_field_capacity">Capacidad</string>
+    <string name="soccer_field_price">Precio</string>
+    <string name="create">Crear</string>
+    <string name="cancel">Cancelar</string>
+    <string name="create_soccer_field">Crear Nueva Cancha</string>
+    <string name="all_fields_required">Todos los campos son requeridos</string>
 </resources>
