--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -31,4 +31,5 @@
     <string name="all_fields_required">Todos los campos son requeridos</string>
     <string name="all_permissions_required">Todos los permisos son requeridos</string>
     <string name="some_permissions_disabled">Debe habilitar algunos permisos requeridos por la applicación, en configuraciones</string>
+    <string name="improve_map_experience">Para una mejor experiencia de usuario, habilite el GPS del dispositivo</string>
 </resources>
