--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="all_fields_required">All fields are required</string>
     <string name="all_permissions_required">All permissions are required</string>
     <string name="some_permissions_disabled">Go to settings and enable the required permissions for this application</string>
+    <string name="improve_map_experience">To improve your experience, enable the GPS on your phone</string>
 </resources>
