--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -6,8 +6,9 @@
     <!-- Drawer Menu Items -->
     <string name="fields_item">Canchas</string>
     <string name="members_item">Integrantes</string>
-    <string name="option_c_item">Opción C</string>
+    <string name="option_c_item">Partidos</string>
     <string name="setting_item">Configuración</string>
+    <string name="join_code_item">Código de invitación</string>
     <string name="log_out_item">Cerrar Sesión</string>
     <string name="create_group">Crear Grupo</string>
     <string name="join_group">Unirse al Grupo</string>
@@ -32,4 +33,5 @@
     <string name="all_permissions_required">Todos los permisos son requeridos</string>
     <string name="some_permissions_disabled">Debe habilitar algunos permisos requeridos por la applicación, en configuraciones</string>
     <string name="improve_map_experience">Para una mejor experiencia de usuario, habilite el GPS del dispositivo</string>
+    <string name="invitation_code_legend">Utilice el siguiente código para invitar más usuario a unirse a este grupo</string>
 </resources>
