--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="all_permissions_required">All permissions are required</string>
     <string name="some_permissions_disabled">Go to settings and enable the required permissions for this application</string>
     <string name="improve_map_experience">To improve your experience, enable the GPS on your phone</string>
+    <string name="change_group">Change Group</string>
 </resources>
