--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="create_match">Create soccer match</string>
     <string name="select_soccer_field">Select soccer field</string>
     <string name="participants_number">Number of participants</string>
+    <string name="soccer_field_details">Soccer field details</string>
 </resources>
